finish the 05-DESCENDANT-COMBINATOR exercises
finishing all the exercises as commanded to look just like desired-outcome.png using the descendant combinator
adding some additional type of descendant combinator for experimenting purpose

--- a/foundations/intro-to-css/05-descendant-combinator/index.html
+++ b/foundations/intro-to-css/05-descendant-combinator/index.html
@@ -17,5 +17,18 @@
       <p class="text">This should be styled.</p>
       <p class="text">This should be styled.</p>
     </div>
+
+    <div class="div">
+      <p>This should also be styled</p>
+      <p>This should also be styled</p>
+    </div>
+
+    <div class="container1">
+      <p>This should be styled even more</p>
+    </div>
+
+    <div>
+      <p class="text1">This should be styled just enough</p>
+    </div>
   </body>
 </html>
